--- a/css/style.css
+++ b/css/style.css
@@ -503,7 +503,7 @@ button {
      background: url(../images/bg_blanco.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 
 .about .titlepage {
@@ -525,7 +525,7 @@ button {
 }
 
 .about_img figure img {
-     width: 100%;
+     width: 80%;
 }
 
 
@@ -536,7 +536,7 @@ button {
      background: url(../images/bg_negro.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 
 .videos .titlepage {
@@ -580,7 +580,7 @@ button {
      background: url(../images/bg_azul.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 
 .mobile .titlepage {
@@ -624,19 +624,19 @@ button {
      background: url(../images/bg_blanco.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 .news1 {
      background: url(../images/bg_celeste.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 .news2 {
      background: url(../images/bg_lila.jpg);
      background-repeat: no-repeat;
      background-size: 100% 100%;
-     padding: 90px 0;
+     padding: 30px 0;
 }
 
 .news .titlepage {
@@ -644,7 +644,7 @@ button {
      padding: 0;
 }
 
-.news .titlepage h2 {
+.news .titlepage h3 {
      color: rgb(0, 0, 0);
      font-size: 40px;
 }
@@ -753,8 +753,8 @@ button {
 
 .contact {
      background: #042431;
-     margin-top: 90px;
-     padding: 90px 0;
+     margin-top: 50px;
+     padding: 30px 0;
 }
 
 .contact .titlepage h2 {
@@ -814,7 +814,7 @@ button {
 
 .border-top {
      border-top: #fff solid 1px;
-     padding-top: 90px;
+     padding-top: 30px;
 }
 
 .footer h3 {
@@ -937,3 +937,129 @@ footer i{
      width: 100%;
 }
 
+
+
+/************** *************************************  **************/ 
+
+/**************   Vuelos  **************/ 
+.contenedor {
+     max-width: 1200px;
+     width: 80%;
+     margin: 0 auto;
+  
+ }
+ 
+ #caja:hover{
+ opacity:0.7;
+ }
+ 
+ /************* Grid **************/
+ .tres-columnas {
+     display: grid;
+     grid-template-columns: repeat(2, 1fr);
+     column-gap: 2rem;
+ }
+ 
+ 
+ /******** Vuelos *************/
+ .card_v{
+     width: 330px;
+     height: 500px;
+     border-radius: 8px;
+     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+     overflow: hidden;
+     margin: 20px;
+     text-align: center;
+     transition: all 0.25s;
+     background-color: white;
+ }
+ .card_v:hover{
+     transform: translateY(-15px);
+     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);  
+ }
+ .card_v a:hover{
+     color: #ff0606;
+ }
+  .card_v img{
+     width: 220px;  /* 330*/
+     height: 200px;   /* 220*/
+ }
+ .card_v h4{
+     font-weight: 600;
+     font-size: 25px;
+ 
+ }
+ .card_v p{
+     padding: 0 1rem;
+     font-size: 16px;
+     font-weight: 300;
+ }
+ .card_v a {
+     font-weight: 500;
+     text-decoration: none;
+     color: #ffffff;
+ }
+ 
+ /* boton1  paquetes  */
+ .css-button-rounded--red {
+     min-width: 130px;
+     height: 40px;
+     color: #fff;
+     padding: 5px 10px;
+     font-weight: bold;
+     cursor: pointer;
+     transition: all 0.3s ease;
+     position: relative;
+     display: inline-block;
+     outline: none;
+     border-radius: 5px;
+     border: 2px solid #d90429;
+     background: #d90429;
+   }
+   .css-button-rounded--red:hover {
+     background: #fff;
+     color: #d90429
+   }
+ 
+ 
+   /** boton2  vuelos **/
+   .boton {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 40%;
+      height: 40px;
+      background: rgb(52, 25, 102);
+      color: #fff;
+      font-weight: 500;
+      border: none;
+      cursor: pointer;
+      text-transform: uppercase;
+      transition: .3s ease all;
+      border-radius: 5px;
+      position: relative;
+      overflow: hidden;
+ }
+ .boton span {
+      position: relative;
+      z-index: 2;
+      transition: .3s ease all;
+ }
+   .boton.cuatro::after {
+      content: "";
+      width: 1px;
+      height: 1px;
+      background: none;
+      position: absolute;
+      z-index: 1;
+      top: 50%;
+      left: 50%;
+      transition: .3s ease-in-out all;
+      border-radius: 100px;
+      transform-origin: center;
+ }
+ .boton.cuatro:hover::after {
+      transform: scale(400);
+      background: #cc1010;
+ }
+ 
